# skills-agent

./: .env.example  .gitignore  README.md  README_zh.md  docker-compose.yml  pyproject.toml
app/agent/: Dockerfile  README.md  __init__.py  client.py  config.py  database.py  server.py
app/agent/api/: __init__.py  routes.py
app/chat/: Dockerfile  __init__.py  client.py  config.py  database.py  server.py
docs/: README_zh.md
services/: __init__.py  skill.py
services/codereview_guide/: SKILL.md
services/deepsearch_service/: Dockerfile  client.py  engine.py  prompts.py  server.py
services/embedding_service/: Dockerfile  client.py  entrypoint.sh
services/file_service/: SKILL.md  client.py
services/memory_service/: __init__.py  client.py
services/ocr_service/: client.py  server.py
services/rag_service/: Dockerfile  client.py  server.py
services/rerank_service/: Dockerfile  client.py  entrypoint.sh
services/sandbox_service/: Dockerfile  client.py  executor.py  server.py
services/search_guide/: SKILL.md
services/websearch_service/: Dockerfile  SKILL.md  analyzer.py  browser_pool.py  clear_cache.py  client.py  content_analyzer.py  models.py  page_fetcher.py  result_filter.py  server.py  storage_clients.py  url_scorer.py
storage/milvus/: Dockerfile  __init__.py  client.py  database.py
storage/pgsql/: Dockerfile  __init__.py  client.py  database.py  models.py
storage/sandbox_data/: test_read.txt  test_write.txt
storage/workspace/: verification_test.txt
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+48 files in other folders)
