[project]
name = "myagent"
version = "0.1.0"
description = "A general-purpose intelligent agent framework with dynamic skill discovery and execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "langchain>=1.1.3",
    "openai>=2.14.0",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
]
